# Elytra-Studio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
